tests/paczka1/fuzzy1/53313200.err
Error in line 10: cyy5ho S42 95,7
Error in line 12: gNOfukpiwo A585 -1,6
Error in line 11: cyy5ho S568 8,2
Error in line 5: S155 A585 107,6
Error in line 29: S155 S568 52,8
Error in line 28: cyy5ho S568 93,8
Error in line 34: S155 S42 168,16
Error in line 23: gNOfukpiwo A585 83,4
Error in line 26: VmhGUABF S155 72,0
